--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <p>关于Tktest：</p>
 <p>Tktest：是一个文字处理系统，无需依赖，非常方便</p>
- <a href="https://zhihongwang250.gthub.io/tkos10_help_doc">查看帮助</a>
+<a href="https://zhihongwang250.github.io/tktext10_help_doc/">查看帮助</a>
 
 </body>
 </html>
